Fix Dockerfile
